@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-06T00:50:10Z",
-  "count_outdated" : 1014,
-  "uniques_outdated" : 620,
-  "count" : 1027,
-  "uniques" : 633,
+  "timestamp" : "2025-09-07T00:56:05Z",
+  "count_outdated" : 1015,
+  "uniques_outdated" : 621,
+  "count" : 1028,
+  "uniques" : 634,
   "clones" : [
-    {
-      "timestamp": "2025-08-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-24T00:00:00Z",
       "count": 1,
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2025-09-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
