@@ -1,3 +1,12 @@
+2025-09-07T00:56:05Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17521724411 # 759
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-07
+* notice: last 14d: unq all: 3 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 620 1014 / 633 1027
+* notice: next accum: outdated-unq outdated-all / unq all: 621 1015 / 634 1028
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-08-23] / [2025-09-06]
+
 2025-09-06T00:50:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17507678895 # 758
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-06
